# LDM

./: .gitignore  HowToVim.txt  LDM.pro  main.cpp
Dynamic/: .vimrc  .ycm_extra_conf.py  CMakeLists.txt
Dynamic/data/: potential.txt
Dynamic/src/: main.cpp
Dynamic/src/core/exception/: Exception.h
Dynamic/src/data/: Data.cpp  Data.h
Dynamic/src/friction/: Friction.cpp  Friction.h
Dynamic/src/mass/: Mass.cpp  Mass.h
Dynamic/src/nucleus/: Nucleus.cpp  Nucleus.h
Dynamic/src/potential/: IPotential.h  Potential.cpp  Potential.h  PotentialLoader.cpp  PotentialLoader.h  PotentialLoaderException.h
Dynamic/src/random/: IRandom.h  Random.cpp  Random.h
Dynamic/src/reaction/: IReaction.h  Reaction.cpp  Reaction.h  Result.h
Dynamic/src/test/: DynamicTestSuite.h
Dynamic/src/test/random/: RandomKurtosisTest.h  RandomMeanTest.h  RandomSkewnessTest.h  RandomTestHelper.h  RandomVarianceTest.h
Dynamic/src/utils/logger/: Logger.h
Friction/: CMakeLists.txt
Friction/src/shape/: Shape.cpp
Friction/src/shape/factories/: AShapeFactory.h
Mass/: .vimrc  .ycm_extra_conf.py  CMakeLists.txt
Mass/src/: main.cpp
Mass/src/gauss/: GaussTable.cpp
Mass/src/mass/: A.cpp  A.h  Mass.cpp  Mass.h  Tensor.h
Mass/src/shape/: Coordinates.h  Shape.cpp  Shape.h
Mass/src/shape/factories/: CShapeFactory.h
Mass/src/utils/logger/: Logger.h
Mass/src/utils/test/: Test.cpp
Potential/: CMakeLists.txt  LDM.pro  main.cpp
Potential/potential/: Constants.h  CoulombEnergy.cpp  CoulombEnergy.h  CoulombEnergySharp.cpp  CoulombEnergySharp.h  Potential.cpp  Potential.h  PotentialSharp.cpp  PotentialSharp.h  RotationEnergy.cpp  RotationEnergy.h  RotationEnergySharp.cpp  RotationEnergySharp.h  Shape.cpp  Shape.h  SurfaceEnerge.cpp  SurfaceEnerge.h  SurfaceEnergy.cpp  SurfaceEnergy.h  SurfaceEnergySharp.cpp  SurfaceEnergySharp.h  Volume.cpp
Potential/potential/const/: Const.h  GaussTable.cpp
Potential/potential/params/: CoulumbEnergySharpParams.cpp  CoulumbEnergySharpParams.h
Potential/resources/: GAUS10.SET
Potential/src/potential/: CoulombEnergy.h  CoulombEnergySharp.cpp  CoulombEnergySharp.h  FreeEnergy.cpp  FreeEnergy.h  Potential.cpp  RotationEnergy.h  SurfaceEnergy.h  SurfaceEnergySharp.cpp  SurfaceEnergySharp.h  Volume.cpp  Volume.h
Potential/src/potential/const/: GaussTable.h
Potential/src/potential/params/: CoulumbEnergySharpParams.h
Potential/src/test/potential/: CoulumbEnergySharpTest.cpp  CoulumbEnergySharpTest.h  CoulumbEnergyTest.h  FreeEnergyTest.cpp  FreeEnergyTest.h  PotentialMainTest.h  RotationEnergySharpTest.cpp  SurfaceEnergySharpTest.h  SurfaceEnergyTest.h
Potential/src/utils/test/: TestResult.cpp  TestResult.h  TestSuite.h
Potential/test/: CoulumbEnergyTest.cpp  PotentialMainTest.h  PotentialTest.h  RotationEnergyTest.cpp  SurfaceEnergyTest.cpp
Potential/test/potential/: CoulumbEnergySharpTest.cpp  CoulumbEnergySharpTest.h  CoulumbEnergyTest.cpp  PotentialMainTest.h  PotentialSharpTest.cpp  PotentialSharpTest.h  PotentialTest.cpp  PotentialTest.h  RotationEnergySharpTest.cpp  RotationEnergySharpTest.h  RotationEnergyTest.cpp  RotationEnergyTest.h  SurfacEenergyTest.h  SurfaceEnergySharpTest.cpp  SurfaceEnergySharpTest.h  SurfaceEnergyTest.cpp  VolumeTest.cpp  VolumeTest.h
Potential/utils/logger/: Logger.cpp
Potential/utils/test/: Test.cpp  Test.h  TestSuite.cpp
Shape/: CMakeLists.txt
Shape/src/: Shape.cpp  Shape.h
Shape/src/factories/: HShapeFactory.h  IShapeFactory.h
Test/src/: Test.h  TestSuite.cpp
potential/: CoulombEnergy.cpp  Shape.cpp  Shape.h  SurfaceEnergy.cpp
resources/: GAUS32.SET  GAUS96.SET
test/: CoulumbEnergyTest.h  PotentialTest.h
utils/test/: ITest.h
